<resources>
    <string name="app_name">MiniChat</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_text">Login</string>
    <string name="don_t_have_an_account_text">Don\'t have an account?</string>
    <string name="signup_now_text">Signup now</string>
    <string name="or_text">Or</string>
    <string name="register_text">Register</string>
    <string name="name_hint">Name</string>
    <string name="login_now_text">Login now</string>
    <string name="already_account_text">Already have account</string>
    <string name="logout_text">Logout</string>

    <string name="facebook_app_id">2229045837171327</string>
    <string name="fb_login_protocol_scheme">fb2229045837171327</string>
    <string name="profile">Profile</string>
    <string name="friends">Friends</string>
    <string name="chats">Chats</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="people">People</string>
    <string name="no_user_found">No User Found</string>
    <string name="user">Users</string>
    <string name="start_conversion">Start Conversion</string>
    <string name="message_hint_text">Type a message....</string>
    <string name="logout">Logout</string>

</resources>
