<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.ChatActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            app:popupTheme="@style/AppTheme.PopupOverlay"
            android:id="@+id/toolbar"
            app:titleTextColor="@color/white"
            android:layout_width="match_parent"
            app:navigationIcon="@drawable/ic_keyboard_arrow"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ripple_effect"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical"
                android:padding="5dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_image_view"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:clickable="true"
                    android:contentDescription="@null"
                    android:focusable="true"
                    android:padding="5dp"
                    android:src="@drawable/ic_people" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/name_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:ellipsize="end"
                        android:gravity="center_vertical"
                        android:paddingStart="10dp"
                        android:textColor="@color/white"
                        android:paddingLeft="10dp"
                        android:paddingEnd="10dp"
                        android:paddingRight="10dp"
                        android:singleLine="true"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                        tools:text="@string/name_hint" />

                    <TextView
                        android:id="@+id/last_seen_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:ellipsize="end"
                        android:gravity="center_vertical"
                        android:paddingStart="10dp"
                        android:textColor="#F5F5F5"
                        android:paddingLeft="10dp"
                        android:paddingEnd="10dp"
                        android:paddingRight="10dp"
                        android:singleLine="true"
                        android:text="@string/name_hint" />
                </LinearLayout>
            </LinearLayout>

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipe_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/chat_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:reverseLayout="false"
                    app:stackFromEnd="true"
                    tools:listitem="@layout/chat_item_left" />

                <com.udevel.widgetlab.TypingIndicatorView
                    android:id="@+id/typing_indicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:padding="10dp"
                    android:visibility="gone"
                    app:animationOrder="lastOneFirst"
                    app:backgroundColor="#DADADA"
                    app:backgroundType="rounded"
                    app:dotAnimationType="Sliding"
                    app:dotColor="#929292"
                    app:dotCount="3"
                    app:dotHorizontalSpacing="5dp"
                    app:dotSecondColor="#252525"
                    app:dotSize="10dp"
                    app:showBackground="true" />
            </LinearLayout>
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone" />

        <TextView
            android:id="@+id/no_conversion_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:padding="10dp"
            android:text="@string/start_conversion"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:visibility="gone" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:padding="10dp">

        <EditText
            android:id="@+id/message_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:autofillHints="@string/message_hint_text"
            android:background="@android:color/transparent"
            android:hint="@string/message_hint_text"
            android:inputType="textMultiLine"
            android:singleLine="false"
            tools:targetApi="o" />

        <ImageButton
            android:id="@+id/send_btn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/ic_send"
            android:contentDescription="@string/message_hint_text" />

    </RelativeLayout>
</LinearLayout>